--- a/Styles/assignment.css
+++ b/Styles/assignment.css
@@ -16,6 +16,7 @@
    border-color: rgba(0, 106, 80, 1);
    font-size: 16px;
    font-weight: bold;
+   color: rgba(0, 106, 80, 1);
    }
 .btn-1{
    border-radius: 8px;
